Fix footer layout on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ body > footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-bottom: 1em;
   padding-left: 1em;
   padding-right: 1em;
+}
+
+body > footer > * {
+  padding: 0.5em;
 }
